# calibre-curator

./: .env.example  .gitignore  build.sh  compose.yaml  docker-compose.yml  test_db.py
ai-frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
ai-frontend/src/: main.ts
ai-sidecar/: Dockerfile  pyproject.toml
ai-sidecar/sidecar/: app.py  config.py  logging_config.py  security.py
ai-sidecar/sidecar/ai/: __init__.py  chat.py  providers.py  rate_limiter.py
ai-sidecar/sidecar/api/: _coverage.py  collections.py  duplicates.py  enrichment.py  health.py  ingestion.py  mood.py  providers.py  recommendations.py  search.py  sequences.py  status.py
ai-sidecar/sidecar/db/: calibre_reader.py  repositories.py  schema.py  session.py
ai-sidecar/sidecar/embeddings/: __init__.py  base.py  ollama_provider.py  openai_provider.py
ai-sidecar/sidecar/ingestion/: chunker.py  extractor.py  pipeline.py  scanner.py
ai-sidecar/sidecar/vectors/: __init__.py  base.py  chroma_store.py
ai-sidecar/sidecar/workers/: enrichment_worker.py  scheduler.py
ai-sidecar/tests/: test_chunker.py  test_embeddings.py  test_extractor.py  test_pipeline_progress.py  test_repository_incomplete.py  test_scanner.py  test_search_threshold.py  test_vector_store.py
calibre-web-fork/: Dockerfile  patch_main.py
calibre-web-fork/cps/: ai_bridge.py
cwa-editor/: Dockerfile  start.sh
cwa-editor/editor/: server.py  (+1 more)
cwa-fork/: Dockerfile  patch_detail.py  patch_layout.py  patch_main.py
docs/: CWA_MIGRATION_PLAN.md  QA_TEST_PLAN.md  WEB_EDIT_BOOK_PLAN.md
scripts/: deploy-sidecar.sh
(+72 files in other folders)
