[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "calibre-ai-sidecar"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "gunicorn>=22.0",
    "requests>=2.32",
    "ebooklib>=0.18",
    "pdfminer.six>=20231228",
    "chromadb>=0.5",
    "apscheduler>=3.10",
    "lxml>=5.0",
    "python-magic>=0.4",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
dev = ["pytest>=8.0", "pytest-flask>=1.3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sidecar*"]
